--- a/mangostwo/kubernetes-deployment.yml
+++ b/mangostwo/kubernetes-deployment.yml
@@ -132,13 +132,13 @@ spec:
           containerPort: 8085
         volumeMounts:
         - name: mangos-maps
-          mountPath: /var/k8s-storage/wow/mangostwo/wow-server/maps
+          mountPath: /etc/mangos/wow-server/maps
         - name: mangos-vmaps
-          mountPath: /var/k8s-storage/wow/mangostwo/wow-server/vmaps
+          mountPath: /etc/mangos/vmaps
         - name: mangos-mmaps
-          mountPath: /var/k8s-storage/wow/mangostwo/wow-server/mmaps
+          mountPath: /etc/mangos/mmaps
         - name: mangos-dbc
-          mountPath: /var/k8s-storage/wow/mangostwo/wow-server/dbc
+          mountPath: /etc/mangos/dbc
         resources:
           requests:
             cpu: 100m
@@ -158,16 +158,16 @@ spec:
       volumes:
       - name: mangos-maps
         hostPath:
-          path: /tmp
+          path: /var/k8s-storage/wow/mangostwo/wow-server/maps
       - name: mangos-vmaps
         hostPath:
-          path: /tmp
+          path: /var/k8s-storage/wow/mangostwo/wow-server/vmaps
       - name: mangos-mmaps
         hostPath:
-          path: /tmp
+          path: /var/k8s-storage/wow/mangostwo/wow-server/mmaps
       - name: mangos-dbc
         hostPath:
-          path: /tmp
+          path: /var/k8s-storage/wow/mangostwo/wow-server/dbc
 ---
 apiVersion: v1
 kind: Service
