ingress for mangostwo

--- a/mangostwo/kubernetes-deployment.yml
+++ b/mangostwo/kubernetes-deployment.yml
@@ -184,6 +184,28 @@ spec:
   selector:
     app: mangostwo-server
 ---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name:  mangostwo-server
+  namespace: mangos-two
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`wowserver.homek3s-master.home`)
+      priority: 10
+      services:
+        - name: mangostwo-server
+          port: 8085
+  tls:
+    certResolver: default
+    domains:
+      - main: homek3s-master.home
+        sans:
+          - "*.homek3s-master.home"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -244,3 +266,25 @@ spec:
   clusterIP: None
   selector:
     app: mangostwo-realmd
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: mangostwo-realmd
+  namespace: mangos-two
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`wowrealm.homek3s-master.home`)
+      priority: 10
+      services:
+        - name: mangostwo-realmd
+          port: 3724
+  tls:
+    certResolver: default
+    domains:
+      - main: homek3s-master.home
+        sans:
+          - "*.homek3s-master.home"
