--- a/mangostwo/kubernetes-deployment.yml
+++ b/mangostwo/kubernetes-deployment.yml
@@ -177,9 +177,11 @@ metadata:
   labels:
     app: mangostwo-server
 spec:
+  type: NodePort
   ports:
   - name: mangos-server
     port: 8085
+    targetPort: 8085
   clusterIP: None
   selector:
     app: mangostwo-server
@@ -238,9 +240,12 @@ metadata:
   labels:
     app: mangostwo-realmd
 spec:
+  type: NodePort
   ports:
   - name: mangos-realmd
     port: 3724
+    targetPort: 3724
   clusterIP: None
   selector:
     app: mangostwo-realmd
+---
