--- a/mangostwo/kubernetes-deployment.yml
+++ b/mangostwo/kubernetes-deployment.yml
@@ -182,6 +182,7 @@ spec:
   - name: mangos-server
     port: 8085
     targetPort: 8085
+    clusterIP: 192.168.25.118
   selector:
     app: mangostwo-server
 ---          
@@ -244,6 +245,7 @@ spec:
   - name: mangos-realmd
     port: 3724
     targetPort: 3724
+    clusterIP: 192.168.25.118
   selector:
     app: mangostwo-realmd
 ---
