Revert "try again"
This reverts commit 4095a6f896621d2bbc9749c2b48f2926bca8dc9d.

--- a/mangostwo/kubernetes-deployment.yml
+++ b/mangostwo/kubernetes-deployment.yml
@@ -177,8 +177,7 @@ metadata:
   labels:
     app: mangostwo-server
 spec:
-  type: ExternalName
-  externalName: wowserver.homek3s-master.home
+  type: LoadBalancer
   ports:
   - name: mangos-server
     port: 8085
@@ -240,8 +239,7 @@ metadata:
   labels:
     app: mangostwo-realmd
 spec:
-  type: ExternalName
-  externalName: wowrealm.homek3s-master.home
+  type: LoadBalancer
   ports:
   - name: mangos-realmd
     port: 3724
